<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/profile"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/onBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/email"
        android:textStyle="bold"
        android:textColor="@color/onBackground"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_email"
        android:textColor="@color/onBackground"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/reminder_time"
        android:textStyle="bold"
        android:textColor="@color/onBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_reminder_time"
        android:textColor="@color/onBackground"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_set_reminder"
        android:text="@string/set_reminder"
        android:backgroundTint="@color/colorSecondary"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/surfaceVariant" />

    <Button
        android:id="@+id/btn_logout"
        android:text="@string/logout"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
